# bot_telegram_rutracker

./: .gitignore  Cargo.toml  LICENSE  README.md  sonar-project.properties
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/oracle/: cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build-lambda.sh  build-oracle.sh  check.sh  release.sh  set-webhook.sh  show-logs.sh  since-to-start-time-ms.py
src/: app.rs  catalog.rs  config.rs  downloader.rs  image_cache.rs  lib.rs  main.rs  rutracker.rs  telegram.rs  torrent.rs
tests/fixtures/rutracker/: categories.html  search.html  search_login.html  topic.html
