[package]
name = "telegram-rutracker-bot"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
encoding_rs = "0.8"
html-escape = "0.2"
lambda_http = "1.2"
lava_torrent = "0.11"
librqbit = { version = "9.0.0-rc.0", default-features = false, features = ["rust-tls"] }
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
