[package]
name = "telegram-rutracker-bot"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
encoding_rs = "0.8"
hmac = "0.13"
html-escape = "0.2"
lambda_http = "1.2"
lambda_runtime = "1.2"
lava_torrent = "0.11"
librqbit = { version = "9.0.0-rc.0", default-features = false, features = ["rust-tls"] }
mime_guess = "2"
nix = { version = "0.30", features = ["fs"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "multipart", "rustls-tls", "stream"] }
quick-xml = { version = "0.38", features = ["encoding"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.11"
time = "0.3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"
xz2 = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
